# polars_rapidsai

./: .gitignore  README.md  polars.ipynb  polars_vs_pandas.ipynb  pyproject.toml
notebooks/: RapidsAi.ipynb  polars.ipynb  polars_vs_pandas.ipynb
src/: concat_data.py  make_data.py  run_pipeline_pandas.py  run_pipeline_polars.py
