[tool.poetry]
name = "polars-rapidsai"
version = "0.1.0"
description = ""
authors = ["ptrbelonovsky <p.belonovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.4.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
faker = "^27.0.0"
tqdm = "^4.66.5"
joblib = "^1.4.2"
black = {extras = ["jupyter"], version = "^24.8.0"}
isort = "^5.13.2"
psutil = "^6.0.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
catboost = "^1.2.5"
numpy = "1.26.4"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
